db: add phone column
